--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "tabWidth": 4,
-  "useTabs": false
+    "tabWidth": 4,
+    "useTabs": false,
+    "printWidth": 120,
+    "singleQuote": true
 }
